--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.gson-2.8.2.jar=C:\\Users\\ppc\\Downloads\\gson-2.8.2.jar
-user.properties.file=C:\\Users\\ppc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Equipo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
