--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/CACACliente.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.8.2.jar=C:\\Users\\ivan_\\Documents\\Octavo\\Programaci\u00f3n Avanzada II\\CACAServer\\lib\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=lib\\gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
