--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.gson-2.8.2.jar=C:\\Users\\ppc\\Downloads\\gson-2.8.2.jar
-user.properties.file=C:\\Users\\ppc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.gson-2.8.2.jar=C:\\Users\\ivan_\\Documents\\Octavo\\Programaci\u00f3n Avanzada II\\CACACliente\\lib\\gson-2.8.2.jar
+user.properties.file=C:\\Users\\ivan_\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
